--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
-    "vercel": "^35.2.3"
+    "vercel": "^36.0.0"
+  },
+  "name": "vercel-public-directory",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:adrianl01/vercel-public-directory.git",
+  "author": "adrianl01 <gustavo.adrian.leiva879@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next"
   }
 }
