--- a/package.json
+++ b/package.json
@@ -7,10 +7,5 @@
   "main": "index.js",
   "repository": "git@github.com:adrianl01/vercel-public-directory.git",
   "author": "adrianl01 <gustavo.adrian.leiva879@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next"
-  }
+  "license": "MIT"
 }
