--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "vercel": "^36.0.0"
   },
   "name": "vercel-public-directory",
@@ -7,5 +10,10 @@
   "main": "index.js",
   "repository": "git@github.com:adrianl01/vercel-public-directory.git",
   "author": "adrianl01 <gustavo.adrian.leiva879@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next"
+  }
 }
