--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next"
+  },
+  "devDependencies": {
+    "@types/react": "18.3.3"
   }
 }
